# cookiecutter-langgraph

./: cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  langgraph.json  pyproject.toml
{{cookiecutter.project_slug}}/.devcontainer/: Dockerfile  devcontainer.json
{{cookiecutter.project_slug}}/.github/workflows/: publish.yml  test.yml
{{cookiecutter.project_slug}}/tests/: test_basic.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: agent.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/utils/: nodes.py  state.py
