[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = "{{ cookiecutter.python_version }}"
license = { text = "{{ cookiecutter.license }}" }
authors = [{ name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }]
dependencies = [
  "langgraph=={{ cookiecutter.langgraph_version }}",
  "langgraph-sdk=={{ cookiecutter.langgraph_sdk_version }}",
  "langchain-core{{ cookiecutter.langchain_core_version }}"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
  "black",
  "isort",
  "pre-commit"
]

[tool.hatch.build.targets.wheel]
packages = ["{{ cookiecutter.package_name }}"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.black]
line-length = 88
target-version = ['py310']
